# autopaper

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  prompts.py
app/models/: __init__.py  paper.py
app/pipeline/: __init__.py  extract.py  graph.py  ingest.py  markdown.py  workflow.py
app/providers/: __init__.py  anthropic_native.py  base.py  factory.py  openai_compatible.py
app/search/: __init__.py  arxiv_client.py  cli.py  prompts.py  query_planner.py  relevance.py  schemas.py  workflow.py
app/utils/: __init__.py  progress.py
config/: autopaper_config.example.json
data/inputs/: 2601_pdf_fallback_test.txt  agentic_rl.txt  example_arxiv_list.txt  pdf_smoke_test.txt  rl_related_batch.txt  single_arxiv.txt
schemas/: literature_query_plan.schema.json  literature_relevance.schema.json  literature_search_request.schema.json  paper_units.schema.json  relationship_graph.schema.json
scripts/: test.py
skills/arxiv-batch-ingest/: SKILL.md
skills/arxiv-batch-ingest/agents/: openai.yaml
skills/latex-to-markdown/: SKILL.md
skills/latex-to-markdown/agents/: openai.yaml
skills/paper-relation-graph-builder/: SKILL.md
skills/paper-relation-graph-builder/agents/: openai.yaml
skills/paper-relationship-workflow/: SKILL.md
skills/paper-relationship-workflow/agents/: openai.yaml
skills/paper-unit-extractor/: SKILL.md  paper-to-unit-skills-recommend.md
skills/paper-unit-extractor/agents/: openai.yaml
skills/research-question-query-builder/: SKILL.md
skills/shared-references/: pipeline-contract.md
